Single neuron working.

--- a/01a_machine_learning.ipynb
+++ b/01a_machine_learning.ipynb
@@ -487,7 +487,7 @@
    ],
    "source": [
     "#%% Q-0.1.2 - Count function to print the number of examples\n",
-    "\n",
+    "print(data_struct['class_names'])\n",
     "n_classes = len(data_struct['class_names'])\n",
     "n_files = len(data_struct['filenames'])\n",
     "d = dict.fromkeys([x for x in range(n_classes)], 0)\n",
