--- a/09b_pytorch.ipynb
+++ b/09b_pytorch.ipynb
@@ -27,14 +27,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([5.5000, 3.0000])\n",
+      "tensor([30.2500,  9.0000])\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "# Create a 5 x 3 Tensor of zeros\n",
@@ -44,7 +53,14 @@
     "# Create a Tensor of zeros with _long_ type\n",
     "x = torch.zeros(10, 10, dtype=torch.long)\n",
     "# Construct a Tensor from the data\n",
-    "x = torch.tensor([5.5, 3])"
+    "x = torch.tensor([5.5, 3])\n",
+    "\n",
+    "# Out of place: new object in memory\n",
+    "x.multiply(x)\n",
+    "print(x)\n",
+    "# In place: same object in memory\n",
+    "x.multiply_(x)\n",
+    "print(x)"
    ]
   },
   {
@@ -59,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -94,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -106,54 +122,62 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.5749, 0.5255],\n",
-      "        [0.9960, 0.9434],\n",
-      "        [1.7060, 1.3024],\n",
-      "        [1.4466, 0.8099],\n",
-      "        [1.0718, 1.0909],\n",
-      "        [0.6841, 0.9996],\n",
-      "        [0.5667, 1.8098],\n",
-      "        [1.3244, 1.0366]])\n",
-      "tensor([[0.5749, 0.5255],\n",
-      "        [0.9960, 0.9434],\n",
-      "        [1.7060, 1.3024],\n",
-      "        [1.4466, 0.8099],\n",
-      "        [1.0718, 1.0909],\n",
-      "        [0.6841, 0.9996],\n",
-      "        [0.5667, 1.8098],\n",
-      "        [1.3244, 1.0366]])\n",
-      "tensor([[0.5749, 0.5255],\n",
-      "        [0.9960, 0.9434],\n",
-      "        [1.7060, 1.3024],\n",
-      "        [1.4466, 0.8099],\n",
-      "        [1.0718, 1.0909],\n",
-      "        [0.6841, 0.9996],\n",
-      "        [0.5667, 1.8098],\n",
-      "        [1.3244, 1.0366]])\n",
-      "tensor([[0.5919, 0.9298],\n",
-      "        [1.1173, 1.4515],\n",
-      "        [2.5675, 1.7883],\n",
-      "        [2.0762, 0.9926],\n",
-      "        [1.5930, 1.7934],\n",
-      "        [1.0501, 1.9560],\n",
-      "        [0.6003, 2.7626],\n",
-      "        [2.2344, 1.6342]])\n",
-      "tensor([[0.0097, 0.2125],\n",
-      "        [0.1208, 0.4794],\n",
-      "        [1.4697, 0.6328],\n",
-      "        [0.9108, 0.1480],\n",
-      "        [0.5586, 0.7664],\n",
-      "        [0.2503, 0.9560],\n",
-      "        [0.0190, 1.7244],\n",
-      "        [1.2052, 0.6195]])\n",
-      "tensor([[0.6307, 0.5176, 0.4123, 0.0590],\n",
-      "        [1.1036, 0.9269, 0.7322, 0.1031],\n",
-      "        [1.7854, 1.3017, 1.0830, 0.1676],\n",
-      "        [1.4153, 0.8352, 0.7575, 0.1336],\n",
-      "        [1.2130, 1.0665, 0.8294, 0.1131],\n",
-      "        [0.8757, 0.9574, 0.6950, 0.0809],\n",
-      "        [1.0539, 1.6884, 1.1119, 0.0952],\n",
-      "        [1.3946, 1.0338, 0.8547, 0.1308]])\n"
+      "tensor([[0.7358, 1.2263],\n",
+      "        [1.9655, 0.7943],\n",
+      "        [0.8314, 1.6781],\n",
+      "        [0.2836, 0.5414],\n",
+      "        [0.6348, 1.1347],\n",
+      "        [1.1475, 1.2132],\n",
+      "        [1.5797, 0.8383],\n",
+      "        [1.1781, 1.1831]])\n",
+      "tensor([[0.7358, 1.2263],\n",
+      "        [1.9655, 0.7943],\n",
+      "        [0.8314, 1.6781],\n",
+      "        [0.2836, 0.5414],\n",
+      "        [0.6348, 1.1347],\n",
+      "        [1.1475, 1.2132],\n",
+      "        [1.5797, 0.8383],\n",
+      "        [1.1781, 1.1831]])\n",
+      "tensor([[0.7358, 1.2263],\n",
+      "        [1.9655, 0.7943],\n",
+      "        [0.8314, 1.6781],\n",
+      "        [0.2836, 0.5414],\n",
+      "        [0.6348, 1.1347],\n",
+      "        [1.1475, 1.2132],\n",
+      "        [1.5797, 0.8383],\n",
+      "        [1.1781, 1.1831]])\n",
+      "tensor([[0.9463, 2.0123],\n",
+      "        [2.9383, 1.0160],\n",
+      "        [0.9407, 2.6222],\n",
+      "        [0.4406, 0.7572],\n",
+      "        [0.9967, 1.5921],\n",
+      "        [1.3957, 1.9957],\n",
+      "        [2.3704, 1.2015],\n",
+      "        [1.9065, 1.6370]])\n",
+      "tensor([[0.1548, 0.9639],\n",
+      "        [1.9120, 0.1761],\n",
+      "        [0.0909, 1.5843],\n",
+      "        [0.0445, 0.1168],\n",
+      "        [0.2297, 0.5190],\n",
+      "        [0.2848, 0.9494],\n",
+      "        [1.2491, 0.3045],\n",
+      "        [0.8581, 0.5370]])\n",
+      "tensor([[0.9674, 1.2016, 1.0454, 0.9664],\n",
+      "        [1.6896, 1.5714, 1.9578, 1.0476],\n",
+      "        [1.1985, 1.5508, 1.2796, 1.2727],\n",
+      "        [0.3976, 0.5085, 0.4261, 0.4150],\n",
+      "        [0.8622, 1.0873, 0.9278, 0.8811],\n",
+      "        [1.2566, 1.4122, 1.3951, 1.0749],\n",
+      "        [1.4300, 1.3949, 1.6407, 0.9655],\n",
+      "        [1.2676, 1.4086, 1.4113, 1.0649]])\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_4467/1664322904.py:12: UserWarning: An output with one or more elements was resized since it had shape [5, 3], which does not match the required output shape [8, 2]. This behavior is deprecated, and in a future PyTorch release outputs will not be resized unless they have zero elements. You can explicitly reuse an out tensor t by resizing it, inplace, to zero elements with t.resize_(0). (Triggered internally at  ../aten/src/ATen/native/Resize.cpp:24.)\n",
+      "  torch.add(x, y, out=result)\n"
      ]
     }
    ],
@@ -188,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -200,7 +224,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-0.4963, -0.3877,  0.1876, -0.5845,  1.5996,  0.9076,  2.9362, -1.5117])\n",
+      "tensor([1.2263, 0.7943, 1.6781, 0.5414, 1.1347, 1.2132, 0.8383, 1.1831])\n",
       "torch.Size([4, 4]) torch.Size([16]) torch.Size([2, 8])\n"
      ]
     }
@@ -224,14 +248,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([-1.4470])\n",
+      "-1.4470454454421997\n"
+     ]
+    }
+   ],
    "source": [
     "x = torch.randn(1)\n",
     "print(x)\n",
@@ -256,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -292,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -325,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -338,7 +371,7 @@
      "output_type": "stream",
      "text": [
       "tensor([5., 7., 9.], grad_fn=<AddBackward0>)\n",
-      "<AddBackward0 object at 0x12d601fd0>\n"
+      "<AddBackward0 object at 0x7fdf5fc41c30>\n"
      ]
     }
    ],
@@ -362,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -375,7 +408,7 @@
      "output_type": "stream",
      "text": [
       "tensor(21., grad_fn=<SumBackward0>)\n",
-      "<SumBackward0 object at 0x12d5f4d90>\n"
+      "<SumBackward0 object at 0x7fdf099cbd00>\n"
      ]
     }
    ],
@@ -409,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -443,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -457,7 +490,7 @@
      "text": [
       "False False\n",
       "None\n",
-      "<AddBackward0 object at 0x12d60ca10>\n",
+      "<AddBackward0 object at 0x7fdf099ca260>\n",
       "True\n",
       "None\n"
      ]
@@ -497,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -533,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,10 +632,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch.nn.functional as F\n",
     "class AttentionLayer(nn.Module):\n",
     "    def __init__(self, n_hidden):\n",
     "        super(ChordLevelAttention, self).__init__()\n",
@@ -622,7 +656,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -636,7 +670,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
   }
  },
  "nbformat": 4,
