--- a/03_support_vector_machines.ipynb
+++ b/03_support_vector_machines.ipynb
@@ -330,7 +330,7 @@
    "source": [
     "plt.figure(figsize=(10, 8)); plt.grid(True)\n",
     "plt.scatter(X[:, 0], X[:, 1], c=y, s=50, edgecolor='w', cmap='winter')\n",
-    "plot_svc_decision_function(model);"
+    "plot_svc_decision_function(model)"
    ]
   },
   {
@@ -644,8 +644,8 @@
     "P = decision_function(our_model, xy.transpose())\n",
     "P = P.reshape((30, 30))\n",
     "# plot decision boundary and margins\n",
-    "ax.contour(Xp, Y, P, colors='w',levels=[-1, 0, 1], alpha=0.9,linestyles=['--', '-', '--']);\n",
-    "ax.scatter(our_model[\"x\"][:, 0], our_model[\"x\"][:, 1],s=300, linewidth=2, edgecolor='w', facecolors='none');"
+    "ax.contour(Xp, Y, P, colors='w',levels=[-1, 0, 1], alpha=0.9,linestyles=['--', '-', '--'])\n",
+    "ax.scatter(our_model[\"x\"][:, 0], our_model[\"x\"][:, 1],s=300, linewidth=2, edgecolor='w', facecolors='none')"
    ]
   },
   {
@@ -840,7 +840,7 @@
     "    print('Training ...')\n",
     "    while passes < max_iter:\n",
     "        # Check that some alphas changed\n",
-    "        num_changed_alphas = 0;\n",
+    "        num_changed_alphas = 0\n",
     "        # Iterative over all alpha_i\n",
     "        for i in range(m):\n",
     "            ...\n",
