--- a/07_gaussian_mixture_models.ipynb
+++ b/07_gaussian_mixture_models.ipynb
@@ -86,7 +86,7 @@
    "outputs": [],
    "source": [
     "from helper_plot import fit_gaussian_mixture\n",
-    "fit_gaussian_mixture(X);"
+    "fit_gaussian_mixture(X)"
    ]
   },
   {
@@ -260,7 +260,7 @@
     "gmm = GaussianMixture(n_components=4).fit(X)\n",
     "labels = gmm.predict(X)\n",
     "plt.figure(figsize=(10,8))\n",
-    "plt.scatter(X[:, 0], X[:, 1], c=labels, s=40, cmap='magma', edgecolor='w');"
+    "plt.scatter(X[:, 0], X[:, 1], c=labels, s=40, cmap='magma', edgecolor='w')"
    ]
   },
   {
@@ -312,7 +312,7 @@
    "source": [
     "size = 100 * (probs.max(1) ** 2)  # square emphasizes differences\n",
     "plt.figure(figsize=(10,8))\n",
-    "plt.scatter(X[:, 0], X[:, 1], c=labels, cmap='magma', s=size, edgecolor='w');"
+    "plt.scatter(X[:, 0], X[:, 1], c=labels, cmap='magma', s=size, edgecolor='w')"
    ]
   },
   {
@@ -724,7 +724,7 @@
     "            ######################\n",
     "            # YOUR CODE GOES HERE\n",
     "            ######################\n",
-    "            \n",
+    "            ...\n",
     "        except np.linalg.LinAlgError:\n",
     "            print(\"Singular matrix: components collapsed\")\n",
     "            pass\n",
@@ -801,7 +801,7 @@
     "from sklearn.datasets import make_moons\n",
     "Xmoon, ymoon = make_moons(200, noise=.05, random_state=0)\n",
     "plt.figure(figsize=(10, 8))\n",
-    "plt.scatter(Xmoon[:, 0], Xmoon[:, 1], edgecolor='w', s=50);"
+    "plt.scatter(Xmoon[:, 0], Xmoon[:, 1], edgecolor='w', s=50)"
    ]
   },
   {
@@ -879,7 +879,7 @@
    "source": [
     "Xnew = gmm16.sample(400)[0]\n",
     "plt.figure(figsize=(10, 8))\n",
-    "plt.scatter(Xnew[:, 0], Xnew[:, 1], s=40, edgecolor='w');"
+    "plt.scatter(Xnew[:, 0], Xnew[:, 1], s=40, edgecolor='w')"
    ]
   },
   {
