--- a/09a_auto_encoders.ipynb
+++ b/09a_auto_encoders.ipynb
@@ -842,27 +842,26 @@
     "\n",
     "\n",
     "class DenoisingAE(nn.Module):\n",
-    "    def __init__(self, *, in_channels, hidden_channels, latent_channels, kernel_size=3):\n",
+    "    def __init__(\n",
+    "        self, *, in_channels, hidden_channels, latent_dim, stride=1, kernel_size=3\n",
+    "    ):\n",
     "        super().__init__()\n",
     "        self.encoder = nn.Sequential(\n",
-    "            nn.Conv2d(in_channels, hidden_channels, kernel_size=kernel_size, ),\n",
+    "            nn.Conv2d(\n",
+    "                in_channels, hidden_channels, kernel_size=kernel_size, stride=stride\n",
+    "            ),\n",
     "            nn.ReLU(),\n",
-    "            nn.Conv2d(hidden_channels, hidden_channels, kernel_size=kernel_size),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Conv2d(hidden_channels, latent_channels, kernel_size=kernel_size),\n",
+    "            nn.Flatten(1),\n",
+    "            nn.Linear(28 * 28 * hidden_channels, latent_dim),\n",
     "            nn.Sigmoid(),\n",
     "        )\n",
     "        self.decoder = nn.Sequential(\n",
-    "            nn.ConvTranspose2d(\n",
-    "                latent_channels, hidden_channels, kernel_size=kernel_size\n",
-    "            ),\n",
-    "            nn.ReLU(),\n",
-    "            nn.ConvTranspose2d(\n",
-    "                hidden_channels, hidden_channels, kernel_size=kernel_size\n",
-    "            ),\n",
-    "            nn.ReLU(),\n",
-    "            nn.ConvTranspose2d(hidden_channels, in_channels, kernel_size=kernel_size),\n",
+    "            nn.Linear(28 * 28 * hidden_channels, latent_dim),\n",
     "            nn.Sigmoid(),\n",
+    "            nn.ConvTranspose2d(\n",
+    "                in_channels, hidden_channels, kernel_size=kernel_size, stride=stride\n",
+    "            ),\n",
+    "            nn.ReLU(),\n",
     "        )\n",
     "\n",
     "    def forward(self, x):\n",
